--- a/Section7/src/components/Cockpit/Cockpit.module.css
+++ b/Section7/src/components/Cockpit/Cockpit.module.css
@@ -1,16 +1,12 @@
-.App {
-  text-align: center;
-}
-
 .red {
   color: red;
 }
-
+  
 .bold {
   font-weight: bold;
 }
-
-.App button {
+  
+.Cockpit button {
   background-color: green;
   color: 'white';
   cursor: pointer;
@@ -19,17 +15,17 @@
   padding: 16px;
 }
 
-.App button:hover {
+.Cockpit button:hover {
   background-color: lightgreen;
   color: 'black';
 }
 
-.App button.Red {
+.Cockpit button.red {
   background-color: red;
   color: black;
 }
 
-.App button.Red:hover {
+.Cockpit button.red:hover {
   background-color: salmon;
   color: black;
 }
