--- a/burger_builder/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/burger_builder/src/components/Burger/BuildControls/BuildControls.module.css
@@ -1,10 +1,10 @@
 .BuildControls {
     width: 100%;
-    background-color: #cf8f2e;
+    background-color: #CF8F2E;
     display: flex;
+    flex-flow: column nowrap;
     align-items: center;
     box-shadow: 0 2px 1px #ccc;
     margin: auto;
     padding: 10px 0;
-    justify-content: center;
 }
