--- a/burger_builder/src/components/auth/AuthForm.module.css
+++ b/burger_builder/src/components/auth/AuthForm.module.css
@@ -1,4 +1,4 @@
-.Auth {
+.AuthForm {
     margin: 20px auto;
     width: 80%;
     text-align: center;
@@ -8,12 +8,17 @@
     box-sizing: border-box;
 }
 
-.Input {
-    display: block;
+.Label {
+    color: blue;
+    font-weight: bold;
+}
+
+.Field {
+    padding: 10px;
 }
 
 @media (min-width: 600px) {
-    .Auth {
+    .AuthForm {
         width: 500px;
     }
 }
